syntax = "proto3";

package zitadel.settings.defaultlogin.v2alpha;
option go_package = "github.com/zitadel/zitadel/pkg/grpc/settings/defaultlogin/v2alpha;defaultlogin";

import "protoc-gen-openapiv2/options/annotations.proto";
import "validate/validate.proto";
import "zitadel/settings/object/v2alpha/object.proto";

message ResolvedHelpSettings {
  // map<string, zitadel.settings.object.v2alpha.ResolvedString>  custom_settings = 1;
  reserved 1;
  zitadel.settings.object.v2alpha.ResolvedString tos_link = 2 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      example: "\"https://zitadel.com/docs/legal/terms-of-service\"";
    }
  ];
  zitadel.settings.object.v2alpha.ResolvedString privacy_policy_link = 3 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      example: "\"https://zitadel.com/docs/legal/privacy-policy\"";
    }
  ];
  zitadel.settings.object.v2alpha.ResolvedString help_link = 4 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      example: "\"https://zitadel.com/docs/manuals/introduction\"";
    }
  ];
  zitadel.settings.object.v2alpha.ResolvedString support_email = 5 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      example: "\"support-email@test.com\"";
      description: "help / support email address."
    }
  ];
}

message SetHelpSettings {
  // map<string, zitadel.settings.object.v2alpha.SetString> custom_settings = 1;
  reserved 1;
  optional zitadel.settings.object.v2alpha.SetString tos_link = 2 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      example: "\"https://zitadel.com/docs/legal/terms-of-service\"";
    }
  ];
  optional zitadel.settings.object.v2alpha.SetString privacy_policy_link = 3 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      example: "\"https://zitadel.com/docs/legal/privacy-policy\"";
    }
  ];
  optional zitadel.settings.object.v2alpha.SetString help_link = 4 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      example: "\"https://zitadel.com/docs/manuals/introduction\"";
    }
  ];
  optional zitadel.settings.object.v2alpha.SetString support_email = 5 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      example: "\"support-email@test.com\"";
      description: "help / support email address."
    }
  ];
}
